# PrismQ.IdeaInspiration.Sources.Content

./: .gitmodules  README.md  pyproject.toml
.github/: copilot-instructions.md
Articles/: README.md  WebArticleSource.md
Articles/Medium/: .env.example  .gitignore  README.md  __main__.py  module.json  pyproject.toml  requirements.txt
Articles/Medium/_meta/tests/: __init__.py  test_config.py  test_database.py  test_metrics.py  test_plugins.py  test_processor.py
Articles/Medium/src/: __init__.py  cli.py
Articles/Medium/src/core/: __init__.py  config.py  database.py  db_utils.py  idea_processor.py  logging_config.py  metrics.py
Articles/Medium/src/plugins/: __init__.py  medium_author.py  medium_publication.py  medium_tag.py  medium_trending.py
Articles/WebArticles/: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
Articles/WebArticles/src/: __init__.py  cli.py
Articles/_meta/: README.md
Commerce/: README.md
Commerce/_meta/: README.md
Community/: README.md
Community/_meta/: README.md
Creative/: README.md
Creative/_meta/: README.md
Events/: README.md
Events/_meta/: README.md
Forums/: README.md
Forums/HackerNews/: .env.example  .gitignore  README.md  module.json  requirements.txt
Forums/HackerNews/src/: __init__.py  __main__.py  cli.py
Forums/HackerNews/tests/: README.md  __init__.py  conftest.py  (+6 more)
Forums/Reddit/: .env.example  .gitignore  README.md  module.json  pyproject.toml  requirements.txt
Forums/Reddit/_meta/docs/: implementation_summary.md
Forums/Reddit/src/: __init__.py  __main__.py  cli.py
Forums/Reddit/src/core/: __init__.py  config.py  database.py  db_utils.py  idea_processor.py  metrics.py
Forums/Reddit/src/plugins/: __init__.py  reddit_rising.py  reddit_search.py  reddit_subreddit.py  reddit_trending.py
Forums/_meta/: README.md
Internal/: README.md
Internal/_meta/: README.md
Podcasts/: README.md
Podcasts/ApplePodcasts/: .env.example  .gitignore  README.md  __main__.py  module.json  requirements.txt
Podcasts/SpotifyPodcasts/: .env.example  .gitignore  README.md  __main__.py  module.json  requirements.txt
Podcasts/_meta/: README.md
Shorts/InstagramReels/: .env.example  .gitignore  README.md  __main__.py  module.json  requirements.txt
Shorts/TikTok/: .env.example  .gitignore  README.md  module.json  pyproject.toml  requirements.txt
Shorts/TwitchClips/: .env.example  .gitignore  README.md  __main__.py
Signals/: README.md
Signals/_meta/: README.md
Streams/: README.md  TwitchClipsSource.md
Streams/KickClips/: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
Streams/_meta/: README.md
_meta/doc/: AI_CODING_GUIDELINES.md
issues/: ROADMAP.md
mod/: README.md
mod/Articles/: MediumSource.md
mod/Forums/: HackerNewsSource.md  RedditSource.md
mod/Podcasts/: SpotifyPodcastsSource.md
mod/PrismQ.RepositoryTemplate.ModuleExample/: README.md
(+158 files in other folders)
